package code.model;

import java.io.Serializable;

public enum OverpaymentType implements Serializable {
   REDUCE_DURATION,
   REDUCE_RATE
}