package code.model;

import java.io.Serializable;

public enum RateType implements Serializable {
   CONSTANT,
   DECREASING
}