package code.service;

import code.model.InputData;

public interface MortgageCalculationServiceI {
    void calculate(InputData inputData);
}
